mdeditor test, not finished yet

--- a/example/06-editor/mdeditor/package.json
+++ b/example/06-editor/mdeditor/package.json
@@ -1,5 +1,8 @@
 {
-  "name"    : "editor",
-  "version" : "0.1.0",
-  "main"    : "main.js"
+  "name": "editor",
+  "version": "0.1.0",
+  "main": "main.js",
+  "dependencies": {
+    "markd": "^1.2.0"
+  }
 }
