--- a/example/97-electron-builder-mt/package.json
+++ b/example/97-electron-builder-mt/package.json
@@ -16,6 +16,7 @@
     }
   },
   "devDependencies": {
+    "7zip-bin-mac": "^1.0.1",
     "electron": "^1.7.9",
     "electron-builder": "^19.37.2"
   }
